# mumsa

./: Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  adler.c  adler.h  alphabet.c  alphabet.h  best.c  bit_array.c  bit_array.h  boot.c  boot.h  cmsa.h  global.h  input.c  input.h  interface.c  main.c  make_sets.c  mem.c  misc.c  msa.h  msa_info.c  msa_info.h  msa_ops.c  msa_ops.h  mumsa_data.c  mumsa_data.h  output.c  output.h  overlap.c  print_reliable_alignment.h  print_reliable_alignment_new.c  process_msa.c  process_msa.h  r_output.c  rand.c  reporting.c  reporting.h  run_mumsa.c  rwalign.c  score_sets.c  (+4 more)
